Fix Sonatype Lift findings
Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>